<resources>
    <string name="app_name">FusionBolt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fusionbolt">FusionBolt</string>
    <string name="image_eau">image eau</string>
    <string name="image_terre">image terre</string>
    <string name="image_vent">image vent</string>
    <string name="image_feu" />
    <string name="Feu" />
    <string name="Eau" />
    <string name="Terre" />
    <string name="Vent" />
    <string name="mix_some_elements_here">Mix some elements here !</string>
    <string name="new_discovery">👨🏻‍🔬 New Discovery !</string>
    <string name="Boue" />
    <string name="Fumée" />
    <string name="Lave" />
    <string name="Vapeur" />
    <string name="mixez_des_l_ments_entre_eux">Mixez des éléments entre eux !</string>
    <string name="elemental_genesis">Elemental Genesis</string>
</resources>