<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/elemdexfragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/listeselements"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/feu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Feu"
            android:src="@drawable/feu"
            android:layout_weight="1"
            android:tag="Feu" />

        <ImageView
            android:id="@+id/eau"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Eau"
            android:src="@drawable/gouttes"
            android:layout_weight="1"
            android:tag="Eau" />

        <ImageView
            android:id="@+id/terre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Terre"
            android:src="@drawable/sol"
            android:layout_weight="1"
            android:tag="Terre" />

        <ImageView
            android:id="@+id/vent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Vent"
            android:src="@drawable/vent"
            android:layout_weight="1"
            android:tag="Vent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listeselementsname"
        android:layout_width="397dp"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listeselements">

        <TextView
            android:id="@+id/my_textview1"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="Feu"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/my_textview2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="Eau"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/my_textview3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="Terre"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/my_textview4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="Vent"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/listeselements2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listeselementsname">



    <ImageView
            android:id="@+id/boue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Boue"
            android:src="@drawable/boue"
            android:tint="#808080"
            android:layout_weight="1"
            android:tag="Boue" />

        <ImageView
            android:id="@+id/fume"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Fumée"
            android:src="@drawable/fume"
            android:tint="#808080"
            android:layout_weight="1"
            android:tag="Acier" />

        <ImageView
            android:id="@+id/lave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Lave"
            android:src="@drawable/lave"
            android:tint="#808080"
            android:layout_weight="1"
            android:tag="Psy" />

        <ImageView
            android:id="@+id/vapeur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Vapeur"
            android:src="@drawable/vapeur"
            android:tint="#808080"
            android:layout_weight="1"
            android:tag="Plante" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listeselementsname2"
        android:layout_width="397dp"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listeselements2">

        <TextView
            android:id="@+id/bouename"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="Boue"
            android:visibility="invisible"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fumename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="Fumée"
            android:visibility="invisible"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lavename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="Lave"
            android:visibility="invisible"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/vapeurname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="Vapeur"
            android:visibility="invisible"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/listeselements3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listeselementsname2">

        <ImageView
            android:id="@+id/vague"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/Vent"
            android:src="@drawable/vague"
            android:tint="#808080"
            android:tag="Vague"/>

        <ImageView
            android:id="@+id/dust"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/Vent"
            android:src="@drawable/dust"
            android:tint="#808080"
            android:tag="Dust"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listeselementsname3"
        android:layout_width="397dp"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listeselements3">

        <TextView
            android:id="@+id/vaguename"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="Vague"
            android:visibility="invisible"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dustname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="Poussière"
            android:visibility="invisible"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/my_textview11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text=""
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/my_textview12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>